--- a/EmpresaDirectorio/nbproject/project.properties
+++ b/EmpresaDirectorio/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/EmpresaDirectorio.jar
+dist.jar=${dist.dir}/EmpresaDirectorioGui.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/EmpresaDirectorio
+dist.jlink.output=${dist.jlink.dir}/EmpresaDirectorioGui
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=EmpresaDirectorio
+jlink.launcher.name=EmpresaDirectorioGui
 main.class=clienteyempresayempleado.ClienteyEmpresayEmpleado
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
